    in a loop to grow the varbuf buffer. This should reduce memory usage and
    be slightly faster on varbufprintf calls.
  * Use the size from stat to allocate the buffers for readlink, instead of
    indefinitely calling readlink and growing the buffer. This should reduce
    memory usage when handling lots of symlinks, and be slightly faster.

  [ Raphaël Hertzog ]
  * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
    that /etc/dpkg/origins/default exists. Closes: #545274
  * Update Standards-Version to 3.8.3 (no changes needed).
  * Major changes to the perl API:
    - Dpkg::Control is now Dpkg::Control::Info
    - Dpkg::Cdata is gone and is replaced by a new Dpkg::Control
    - Dpkg::Control::Fields contains authoritative information
      about fields allowed in various types of control information
      (and can be customized by each vendor). It also integrates
      information that was previously available through Dpkg::Deps.
  * All dpkg-* perl programs that work with control information have been
    updated to use the new Dpkg::Control interface.
  * Create Launchpad-Bugs-Fixed directly in the changelog parsing code thanks
    to a new vendor hook post-process-changelog-entry. Closes: #536066
  * Integrate dpkg-ftp into dselect. Add the required Replaces and Conflicts.

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Czech (Miroslav Kure).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Italian (Milo Casagrande). Closes: #548615

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * Czech (Miroslav Kure).
  * Polish (Wiktor Wandachowicz). Closes: #548541

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * French translation error fixed (Christian Perrier)
    Thanks to Pietro Battiston for spotting it
    Closes: #545446
  * Polish (Wiktor Wandachowicz). Closes: #548541

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).